# Diffusion2D

./: .gitmodules  CMakeLists.txt  Makefile  array.hpp  arrtest.cpp  config.hpp  conn.cpp  conn.hpp  equation.cpp  equation.hpp  face.cpp  face.hpp  index.html  patch.cpp  patch.hpp  patch_group.hpp  plot.py  prob.cpp  prob.hpp  unit_vec.hpp
html/: annotated.html  array_8hpp_source.html  classConn-members.html  classConn.html  classConn__coll__graph.map  classEquation-members.html  classEquation.html  classEquation__Prob-members.html  classEquation__Prob.html  classEquation__coll__graph.map  classEquation__coll__graph.md5  classFace-members.html  classFace.html  classFace__coll__graph.map  classFace__coll__graph.md5  classFace__inherit__graph.map  classFace__inherit__graph.md5  classLocalCoor-members.html  classLocalCoor.html  classLocalCoor__coll__graph.map  classLocalCoor__inherit__graph.map  classLocalCoor__inherit__graph.md5  classPatch-members.html  classPatch.html  classPatch__Group-members.html  classPatch__Group.html  classPatch__coll__graph.map  classPatch__coll__graph.md5  classPatch__inherit__graph.map  classPatch__inherit__graph.md5  classProb-members.html  classProb.html  class____array-members.html  class____array.html  class____array__coll__graph.map  class____array__coll__graph.md5  classes.html  config_8hh_source.html  conn_8hpp_source.html  dir_4e7c8c4fc0d923782da8a23d70a9725b.html  (+68 more)
html/search/: all_65.js  all_69.js  all_70.js  classes_5f.js  search.js
include/Diff2D/: array.hpp  boundary.hpp  config.hpp.in  conn.hpp  decl.hpp  equation.hpp  face.hpp  index_lambda.hpp  init.hpp  log.hpp  math.hpp  modules.dox  patch.hpp  patch_group.hpp  point.hpp  prob.hpp  stitch.hpp  types.hpp  unit_vec.hpp  util.hpp
latex/: annotated.tex  classConn.tex  classEquation.tex  classEquation__Prob.tex  classEquation__coll__graph.md5  classFace.tex  classFace__coll__graph.eps  classFace__coll__graph.md5  classFace__inherit__graph.md5  classLocalCoor.tex  classLocalCoor__inherit__graph.md5  classPatch.tex  classPatch__Group.tex  classPatch__coll__graph.eps  classPatch__coll__graph.md5  classPatch__inherit__graph.md5  classProb.tex  class____array.tex  class____array__coll__graph.md5  dir_4e7c8c4fc0d923782da8a23d70a9725b.tex  dir_4fef79e7177ba769987a8da36c892c5f.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_99fd0bfd50bdebff386f2995e155a7e9.tex  dir_99fd0bfd50bdebff386f2995e155a7e9_dep.md5  dir_be4bc17b05887497992c67236fde9ccc.tex  doxygen.sty  group__group__core.tex  hierarchy.tex  refman.tex  structEdgeError.tex  structIS.tex  structIndex__Lambda.tex  structInitializer__list.tex  structInitializer__list_3_011_00_01U_01_4.tex  structNoIntersectError.tex  structTerm.tex  struct____multivec.tex  struct____multivec_3_011_00_01U_01_4.tex
src/Diff2D/: LocalCoor.cpp  array.hpp  arrtest.cpp  config.hh.in  conn.cpp  conn.hpp  equation.cpp  equation.hpp  face.cpp  face.hpp  init.cpp  (+16 more)
test/: CMakeLists.txt
test/option_2/: CMakeLists.txt  main.cpp
test/option_2/src/: main.cpp
test/test1/: .main.cpp.swp  CMakeLists.txt  main.cpp
test/test1/src/: main.cpp
(+8 files in other folders)
